# ats

./: Cargo.toml  README.md
.journal/04-2026/22-04-2026-ats-resume-optimizer-cli/: decisions.md  ticket.md
.journal/04-2026/22-04-2026-ats-resume-optimizer-cli/efforts/: 01-scaffold-cli-skeleton.md  02-render-baseline-resume.md  03-keywords-llm-client.md  04-scrape-job-posting.md  05-optimize-and-density.md  06-pdf-export.md  07-run-orchestrator.md
