[workspace]
resolver = "2"
members = [
    "packages/ats-core",
    "packages/ats-scrape",
    "packages/ats-llm",
    "packages/ats-pdf",
    "packages/ats-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "signal", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "serde"] }
async-trait = "0.1"
jsonschema = { version = "0.18", default-features = false }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
wiremock = "0.6"
tempfile = "3"
url = "2"
regex = "1"

[profile.release]
lto = true
